@@ -1,6 +1,7 @@
 ## Here is an example for assembler.
 ##
 syntax "asm" "\.(S|s|asm)$"
+magic "[Aa]ssembl(y|er)"
 color red "\<[A-Z_]{2,}\>"
 color brightgreen "\.(data|subsection|text)"
 color green "\.(align|file|globl|global|hidden|section|size|type|weak)"
