@@ -1,6 +1,7 @@
 ## Here is an example for manpages.
 ##
 syntax "man" "\.[1-9]x?$"
+magic "troff or preprocessor input text"
 color green "\.(S|T)H.*$"
 color brightgreen "\.(S|T)H" "\.TP"
 color brightred "\.(BR?|I[PR]?).*$"
