@@ -1,6 +1,7 @@
 ## Here is an example for xml files.
 ##
 syntax "xml" "\.([jrs]html?|sgml?|xml|xslt?)$"
+magic "XML.*document text"
 color green  start="<" end=">"
 color cyan   "<[^> ]+"
 color cyan   ">"
